--- a/ros2_ws/src/cecar_lks/package.xml
+++ b/ros2_ws/src/cecar_lks/package.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>lks</name>
+  <name>LKS</name>
   <version>0.0.1</version>
-  <description>TODO: Package description</description>
-  <maintainer email="s0560842@htw-berlin.de">osama</maintainer>
-  <license>TODO: License declaration</license>
+  <description>Lane Keeping System for CeCar</description>
+  <maintainer email="s0560842@htw-berlin.de">Osama Alabaji</maintainer>
+  <license>Unlicensed</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
+
+  <depend>rclcpp</depend>
+  <depend>std_msgs</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
